--- a/package.json
+++ b/package.json
@@ -1,17 +1,27 @@
 {
-  "name": "pipeline-practice",
+  "name": "my-electron-app",
   "version": "1.0.0",
-  "description": "hello world",
+  "description": "An example Electron app",
   "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "electron .",
     "build": "electron-builder"
   },
-  "author": "",
-  "license": "ISC",
   "devDependencies": {
-    "electron": "^33.2.1",
-    "electron-builder": "^25.1.8"
+    "electron": "^25.2.0",
+    "electron-builder": "^24.6.0"
+  },
+  "build": {
+    "appId": "com.example.myapp",
+    "productName": "MyElectronApp",
+    "files": [
+      "dist/**/*",
+      "node_modules/**/*",
+      "main.js",
+      "package.json"
+    ],
+    "directories": {
+      "output": "release"
+    }
   }
 }
