CI/CD pipelining

--- a/.github/workflows/electron-app.yml
+++ b/.github/workflows/electron-app.yml
@@ -37,15 +37,19 @@ jobs:
         run: npm install
 
       # Build the app
-      - name: Build and Package Electron App
-  run: npm run dist
-  env:
-    GH_TOKEN: ${{ secrets.GH_TOKEN }}
+      - name: Build Electron App
+        env:
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
+        run: npm run build
+
+
 
 
       # Package the app with Electron Builder
       - name: Package App
         run: npm run dist
+          env:
+    GH_TOKEN: ${{ secrets.GH_TOKEN }}
 
       # Upload packaged artifacts (optional)
       - name: Upload Packaged App
