--- a/.github/workflows/electron-app.yml
+++ b/.github/workflows/electron-app.yml
@@ -8,6 +8,9 @@ on:
     branches:
       - main
 
+permissions:
+  contents: write
+  
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -71,6 +74,6 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           artifacts: dist/*.*
           tag: v${{ github.run_number }}
-          release_name: Release v${{ github.run_number }}
+          name: Release v${{ github.run_number }}
           draft: false
 
