--- a/.github/workflows/electron-app.yml
+++ b/.github/workflows/electron-app.yml
@@ -67,7 +67,7 @@ jobs:
         uses: actions/checkout@v2
         with:
           fetch-depth: 0
-          ref: develop
+          ref: main  # Make sure this matches the branch you're working with
 
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v3.10.0
