--- a/.github/workflows/electron-app.yml
+++ b/.github/workflows/electron-app.yml
@@ -41,6 +41,10 @@ jobs:
       - name: Install Dependencies
         run: npm install
 
+        # Step 5: Run tests
+      - name: Run Tests
+        run: npm test
+        
       # Build the app
       - name: Build Electron App
         env:
