--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
   "scripts": {
     "start": "electron .",
     "build": "electron-builder",
-    "dist": "npm run build"
+    "dist": "npm run build",
+    "test": "jest"
   },
   "devDependencies": {
     "electron": "^25.2.0",
-    "electron-builder": "^24.6.0"
+    "electron-builder": "^24.6.0",
+    "jest": "^29.7.0"
   },
   "build": {
     "appId": "com.example.myapp",
