--- a/.github/workflows/electron-app.yml
+++ b/.github/workflows/electron-app.yml
@@ -40,11 +40,13 @@ jobs:
       # Install dependencies
       - name: Install Dependencies
         run: npm install
-
-        # Step 5: Run tests
+      
+      # Call reusable test workflow
       - name: Run Tests
-        run: npm test
-        
+        uses: ./.github/workflows/test-workflow.yml
+        with:
+          node-version: "16"
+
       # Build the app
       - name: Build Electron App
         env:
@@ -85,18 +87,18 @@ jobs:
           labels: feature, automated pr
           branch: feature/workflow-demo
 
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build
-    if: github.ref == 'refs/heads/main'
-    steps:
-      # Deploy logic here
-      # Example: Upload the app to a storage service or GitHub Releases
-      - name: Deploy Electron App
-        uses: ncipollo/release-action@v1
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          artifacts: dist/*.*
-          tag: v${{ github.run_number }}
-          name: Release v${{ github.run_number }}
-          draft: false
+  # deploy:
+  #   runs-on: ubuntu-latest
+  #   needs: build
+  #   if: github.ref == 'refs/heads/main'
+  #   steps:
+  #     # Deploy logic here
+  #     # Example: Upload the app to a storage service or GitHub Releases
+  #     - name: Deploy Electron App
+  #       uses: ncipollo/release-action@v1
+  #       with:
+  #         token: ${{ secrets.GITHUB_TOKEN }}
+  #         artifacts: dist/*.*
+  #         tag: v${{ github.run_number }}
+  #         name: Release v${{ github.run_number }}
+  #         draft: false
