--- a/.github/workflows/electron-app.yml
+++ b/.github/workflows/electron-app.yml
@@ -43,7 +43,7 @@ jobs:
       
       # Call reusable test workflow
       - name: Run Tests
-        uses: ./.github/workflows/test-workflow.yml
+        uses: ./test-workflow.yml
         with:
           node-version: "16"
 
