--- a/.github/workflows/electron-app.yml
+++ b/.github/workflows/electron-app.yml
@@ -43,7 +43,7 @@ jobs:
       
       # Call reusable test workflow
       - name: Run Tests
-        uses: Vicky-ux1820/pipeline-practice/.github/workflows/test-workflow.yml@main
+        uses: ./.github/workflows/test-workflow.yml
         with:
           node-version: "16"
 
