--- a/.github/workflows/electron-app.yml
+++ b/.github/workflows/electron-app.yml
@@ -14,14 +14,16 @@ permissions:
   contents: write
 
 jobs:
-    # Call reusable test workflow
-    - name: Run Tests
-      uses: Vicky-ux1820/pipelining-practice/.github/workflows/test-workflow.yml@main
-      with:
-        node-version: "16"
+  # Call reusable test workflow
+  test:
+    name: Run Tests
+    uses: Vicky-ux1820/pipelining-practice/.github/workflows/test-workflow.yml@main
+    with:
+      node-version: "16"
+
   build:
     runs-on: ubuntu-latest
-    needs: test
+    needs: test  # Ensure that tests are run before the build
     steps:
       # Checkout the repository
       - name: Checkout Code
@@ -31,7 +33,7 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: 16 # Use the Node.js version compatible with your Electron app
+          node-version: 16  # Use the Node.js version compatible with your Electron app
 
       # Cache Node.js modules
       - name: Cache Node.js modules
@@ -67,13 +69,13 @@ jobs:
 
   create-pull-request:
     runs-on: ubuntu-latest
-    needs: test
+    needs: test  # Ensure that tests are passed before creating a PR
     steps:
       - name: Check out repository code
         uses: actions/checkout@v2
         with:
           fetch-depth: 0
-          ref: main # Make sure this matches the branch you're working with
+          ref: main  # Make sure this matches the branch you're working with
 
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v3.10.0
