--- a/.github/workflows/electron-app.yml
+++ b/.github/workflows/electron-app.yml
@@ -23,7 +23,7 @@ jobs:
 
   build:
     runs-on: ubuntu-latest
-    needs: test  # Ensure that tests are run before the build
+    needs: create-pull-request  # Ensure that tests are run before the build
     steps:
       # Checkout the repository
       - name: Checkout Code
@@ -89,18 +89,18 @@ jobs:
           labels: feature, automated pr
           branch: feature/workflow-demo
 
-  # deploy:
-  #   runs-on: ubuntu-latest
-  #   needs: build
-  #   if: github.ref == 'refs/heads/main'
-  #   steps:
-  #     # Deploy logic here
-  #     # Example: Upload the app to a storage service or GitHub Releases
-  #     - name: Deploy Electron App
-  #       uses: ncipollo/release-action@v1
-  #       with:
-  #         token: ${{ secrets.GITHUB_TOKEN }}
-  #         artifacts: dist/*.*
-  #         tag: v${{ github.run_number }}
-  #         name: Release v${{ github.run_number }}
-  #         draft: false
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+    if: github.ref == 'refs/heads/main'
+    steps:
+      # Deploy logic here
+      # Example: Upload the app to a storage service or GitHub Releases
+      - name: Deploy Electron App
+        uses: ncipollo/release-action@v1
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          artifacts: dist/*.*
+          tag: v${{ github.run_number }}
+          name: Release v${{ github.run_number }}
+          draft: false
